# d_python-sdk

./: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  tox.ini  tree.txt
.github/workflows/: ci.yaml  pr-checks.yaml  push.yaml  release-main.yaml  release-test.yaml  release.yaml
docs/: CHANGELOG.md  versionhistory.rst
tests/: test_basic.py  test_client.py  test_sdk_facade.py
walacor_python_sdk/: _version.py  base_service.py  main.py  sdk_facade.py  w_client.py  walacor_service.py
walacor_python_sdk/authentication/: auth_service.py
walacor_sdk/: _version.py  main.py
