[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "setuptools-scm",
  "wheel",
]

[project]
name = "walacor-python-sdk"
version = "0.1.0"
description = "Python SDK for Walacor"
readme = "README.md"
keywords = [
  "data-transformations",
  "lineage",
  "provenance",
  "walacor",
]
license = {text = "Apache-2.0"}
authors = [
  { name = "Garo Kechichian", email = "garo.keshish@gmail.com" },
]
requires-python = ">=3.11"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests>=2.20",
]
version = "0.1.999"


[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pytest>=6",
  "pytest-cov",
]
transformations = [
  "numpy>=1.21",
  "pandas>=1.2",
  "scikit-learn>=1",
]
[project.urls]
Documentation = "https://apidoc.walacor.com"
Homepage = "https://www.walacor.com"
[project.scripts]

[tool.setuptools.packages]
find = { where = ["walacor_sdk"] }

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
exclude = [
  ".git",
  "__pycache__",
  "dist",
  "build",
  "venv",
  ".venv",
]

[tool.semantic_release]
tag_format = "{version}"
build_command = "python -m build"

[tool.semantic_release.branches."test"]
match = "test"
prerelease = true
prerelease_token = "rc"
repository_url = "https://test.pypi.org/legacy/"

[tool.semantic_release.branches."main"]
match = "main"
prerelease = false
repository_url = "https://upload.pypi.org/legacy/"